Signed-off-by: Hector Javier Barrantes Prieto <javier.barrantes@novassist.local>

--- a/Front/indice.html
+++ b/Front/indice.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 	<title>AutoMat</title>
+    <link rel="stylesheet" href="indice.css">
 </head>
 <body>
 	<header>
 		<h1>Contenidos</h1>
-        <link rel="stylesheet" href="indice.css">
 	</header>
 	<main>
 		<section>
 			<h2>Multimedia</h2>
 			<ul class="multimedia">
-                <li>VLC</li>
+                <li><a href="index.html#VLC">VLC</a></li>
                 <li>CS</li>
                 <li>CS</li>
                 <li>CS</li>
@@ -25,12 +25,12 @@
 		<section>
 			<h2>Utilitarios</h2>
             <ul class="Utilitarios">
-                <li>TightVNC</li>
-                <li>VPNForticlient</li>
-                <li>7Zip</li>
-                <li>ProcessExplorer</li>
-                <li>AnyDesk</li>
-                <li>iDrive</li>
+                <li><a href="index.html#VNC">TightVNC</a></li>
+                <li><a href="index.html#VPN">VPNForticlient</a></li>
+                <li><a href="index.html#ZIP">7Zip</a></li>
+                <li><a href="index.html#PREX">ProcessExplorer</a></li>
+                <li><a href="index.html#ANYDESK">AnyDesk</a></li>
+                <li><a href="index.html#iDrive">iDrive</a></li>
                 <li>CS</li>
             </ul>
 		</section>
@@ -38,9 +38,9 @@
 		<section>
 			<h2>Productividad</h2>
             <ul class="Productividad">
-                <li>FileZilla</li>
-                <li>Adobe Creative Cloud</li>
-                <li>Sophos</li>
+                <li><a href="index.html#FileZilla">FileZilla</a></li>
+                <li><a href="index.html#CreativeCloud">Adobe Creative Cloud</a></li>
+                <li><a href="index.html#Sophos">Sophos</a></li>
                 <li>CS</li>
                 <li>CS</li>
                 <li>CS</li>
