--- a/Front/index.html
+++ b/Front/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>AutoMat(Beta)</title>
   <link rel="stylesheet" href="style.css">
-  <script src="..\BackEnd\script.js"></script>
+  <script src="BackEnd\Scripts\downloadbottons.js"></script>
 </head>
 <body>
   <header>
 	<div class="title-container">
-       <h1 class="neon-title">AutoMat</h1>
+       <h1 class="neon-title">AutomaticStore</h1>
     </div>
 	<nav>
 	 <ul class="hmenu">	
