Signed-off-by: Hector Javier Barrantes Prieto <javier.barrantes@novassist.local>

--- a/Front/Login/index.html
+++ b/Front/Login/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>AutoMat(Beta)</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\Front\css\style.css">
   <script src="BackEnd\Scripts\downloadbottons.js"></script>
 </head>
 <body>
