--- a/Front/Login/indice.html
+++ b/Front/Login/indice.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>AutoMat</title>
-    <link rel="stylesheet" href="indice.css">
+    <link rel="stylesheet" href="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\Front\css\indice.css">
 </head>
 <body>
 	<header>
