--- a/Front/Login/login.html
+++ b/Front/Login/login.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Inicio de sesion</title>
+        <title>Login</title>
+        <link rel="stylesheet" type="text/css" href="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\Front\css\login.css">
     </head>
     <body>
-        <h2>Inicio de sesion</h2>
-        <form action="BackEnd\BackLogin\login.php" method="POST">
+        <h2>Login</h2>
+        <form>
             <label for="username">Usuario:</label>
             <input type="text" name="username" id="username" required><br><br>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required><br><br>
             <input type="submit" value="Iniciar sesion">
         </form>
+        <script src="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\BackEnd\BackLogin\login.js"></script>
     </body>
 </html>
