--- a/Front/Login/login.html
+++ b/Front/Login/login.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Login</title>
-        <link rel="stylesheet" type="text/css" href="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\Front\css\login.css">
-    </head>
-    <body>
-        <h2>Login</h2>
-        <form>
-            <label for="username">Usuario:</label>
-            <input type="text" name="username" id="username" required><br><br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required><br><br>
-            <input type="submit" value="Iniciar sesion">
-        </form>
-        <script src="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\BackEnd\BackLogin\login.js"></script>
-    </body>
+<head>
+    <title>Login y Registro</title>
+    <link rel="stylesheet" type="text/css" href="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\Front\css\login.css">
+</head>
+<body>
+    <div class="container">
+        <div id="formContainer" class="slide-up">
+            <div id="loginContainer" class="form-container">
+                <h2>Login</h2>
+                <form id="loginForm" class="form-group">
+                    <label for="username">Usuario:</label>
+                    <input type="text" name="username" id="username" required>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                    <div class="button-container">
+                        <button id="loginButton">Iniciar sesión</button>
+                        <button id="registerSlideButton">Registrar</button>
+                    </div>
+                </form>
+            </div>
+            <div id="registerContainer" class="form-container">
+                <h2>Registro</h2>
+                <form id="registerForm" class="form-group">
+                    <label for="newUsername">Nuevo usuario:</label>
+                    <input type="text" name="newUsername" id="newUsername" required>
+                    <label for="newPassword">Nueva contraseña:</label>
+                    <input type="password" id="newPassword" name="newPassword" required>
+                    <div class="button-container">
+                        <button id="registerButton">Registrar</button>
+                        <button id="loginSlideButton">Volver al login</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    
+    <script src="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\BackEnd\BackLogin\login.js"></script>
+</body>
 </html>
