Signed-off-by: Hector Javier Barrantes Prieto <javier.barrantes@novassist.local>

--- a/Front/Login/index.html
+++ b/Front/Login/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>AutoMat(Beta)</title>
   <link rel="stylesheet" href="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\Front\css\style.css">
-  <script src="BackEnd\Scripts\downloadbottons.js"></script>
+  <script src="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\BackEnd\Scripts\downloadbottons.js"></script>
 </head>
 <body>
   <header>
@@ -203,7 +203,7 @@
   </main>
   <footer>
 	<div class="social-icons">
-		<a href="https://github.com/tatoveins"><i class="..\images\icon\github.png"></i></a>
+		<a href="https://github.com/tatoveins"><i class="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\Front\images\icon\github.png"></i></a>
 		<a href="#"><i class="fab fa-twitter"></i></a>
 		<a href="#"><i class="fab fa-instagram"></i></a>
 	  </div>
