Signed-off-by: Hector Javier Barrantes Prieto <javier.barrantes@novassist.local>

--- a/Front/Login/indice.html
+++ b/Front/Login/indice.html
@@ -13,7 +13,7 @@
 			<h2>Multimedia</h2>
 			<ul class="multimedia">
                 <li><a href="index.html#VLC">VLC</a></li>
-                <li>CS</li>
+                <li><a href="index.html#Audacity">Audacity</a></li>
                 <li>CS</li>
                 <li>CS</li>
                 <li>CS</li>
@@ -50,7 +50,7 @@
 	</main>
 	
 	<footer>
-		<p>© TatoCoffee Code --- V1.0 (Beta)</p>
+		<p>© TatoCoffee Code --- V1.0.0.1 (Beta Closed)</p>
 	</footer>
 </body>
 </html>
