Signed-off-by: Hector Javier Barrantes Prieto <javier.barrantes@novassist.local>

--- a/Front/Login/index.html
+++ b/Front/Login/index.html
@@ -20,6 +20,7 @@
 	  <li class="hcard"><a href="#utilitarios">Utilitarios</a></li>
 	  <li class="hcard"><a href="#productividad">Productividad</a></li>
 	  <li class="hcard"><a href="indice.html">Contenido</a></li>
+	  <li class="hcard"><a href="About.html" class="animated-item">About Us</a></li>
 	</ul>
     </nav>
   </header>
@@ -200,18 +201,7 @@
 			</div>
 		</div>
       </div>
-    </section>
-	<div id="about-button" class="footer">
-		<div class="social-icon">
-			<a href="https://github.com/tatoveins"><i class="AutomatizacionWEB\Front\images\icon\github.png"></i></a>
-			<a href="www.linkedin.com/in/héctor-javier-barrantes-prieto-a72765189"><i class="AutomatizacionWEB\Front\images\icon\linkedin.png"></i></a>
-		</div>
-		<div class="contact-info">
-			<p>TatoCoffee Codex</p>
-			<p><i class="fas fa-envelope"></i>hj201167@gmail.com</p>
-			<p><i class="fas fa-phone"></i>+57 (321) 3365598</p>
-		</div>
-	</div>  
+    </section>  
 </main>
   </body>
   </html>
