Signed-off-by: Hector Javier Barrantes Prieto <javier.barrantes@novassist.local>

--- a/Front/Login/About.html
+++ b/Front/Login/About.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>AutoMat</title>
-        <link rel="stylesheet" href="AutomatizacionWEB\Front\css\footer.css">
+        <link rel="stylesheet" href="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\BackEnd\Scripts\about.js">
         <script src="C:\Users\javier.barrantes\Documents\Proyectos\AutomatizacionWEB\BackEnd\Scripts\footer.js"></script>
     </head>
     <body>
